# minishell

./: CMakeLists.txt  Makefile  README.md  a.out  ffile  kek.c  minishell  minishell.h  test
a.out.dSYM/Contents/Resources/DWARF/: a.out
includes/: minishell.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+7 more)
sources/: built_in_cd.c  built_in_echo.c  built_in_env.c  built_in_exit.c  built_in_pwd.c  built_in_unset.c  built_ins_main.c  catch_signals.c  command_parsing1.c  command_parsing2.c  environ_vars_utils1.c  environ_vars_utils2.c  get_command_information.c  line_check_and_replace_path.c  minishell_main.c  parse_and_add_or_clear_commands.c  readline_prompt.c  rm_redirects_spaces_quotes.c
sources/built_ins/: builtins_main.c  cd.c  echo.c  env.c  exit.c  export.c  pwd.c  unset.c
sources/builtins/: builtins_main.c  cd.c  echo.c  env.c  exit.c  export.c  pwd.c  unset.c
sources/builtins/cd/: cd.c  cd_utils.c
sources/builtins/echo/: echo.c
sources/builtins/env/: env.c
sources/builtins/exit/: exit.c
sources/builtins/export/: export.c  export_utils.c
sources/builtins/pwd/: pwd.c
sources/builtins/unset/: unset.c
sources/environ/: environ_vars_utils1.c  environ_vars_utils2.c
sources/executor/: binary.c  bins_utils.c  builtins.c  executor.c  get_command_position.c  here_doc.c  parse_command.c  pipes.c  redirects.c  wait_child_process.c
sources/main/: minishell_main.c  readline_prompt.c
sources/parser/: clear_commands_array.c  get_command_arguments_array.c  get_command_information.c  get_command_redirects_array.c  get_total_commands_validate_line.c  parse_and_add_commands.c  remove_quotes_change_path.c  remove_redirects_spaces.c  wildcard_find_all_arguments.c  wildcard_find_all_utils.c  wildcard_find_all_utils2.c
sources/sig/: catch_signals.c
sources/signals/: catch_signals.c  sig2.c
src/: built_ins.c  env.c  main.c  prompt.c  signals.c  test.c  utils.c
src/parser/: parser.h  parser_main.c  parser_main.h  parser_structs.h
src/parser/first_pars_step/: first_pars_step.c  first_pars_step.h  first_pars_step_modified_lib_funcs.c  ft_updated_split.c  funcs_for_first_parse_step.h
src/parser/funcs_for_lists/first_pars_list/: ft_new_list.c  main.h  struct.h
