cmake_minimum_required(VERSION 3.21)
project(minishell C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_FLAGS "-L/Users/${USER}/.brew/opt/readline/lib -lreadline")

include_directories(includes)
include_directories(libft)
include_directories(readline)

add_executable(minishell
        includes/minishell.h
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_calloc.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lstadd_back_bonus.c
        libft/ft_lstadd_front_bonus.c
        libft/ft_lstclear_bonus.c
        libft/ft_lstdelone_bonus.c
        libft/ft_lstiter_bonus.c
        libft/ft_lstlast_bonus.c
        libft/ft_lstmap_bonus.c
        libft/ft_lstnew_bonus.c
        libft/ft_lstsize_bonus.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar_fd.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr_fd.c
        libft/ft_split.c
        libft/ft_strchr.c
        libft/ft_strdup.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlcpy.c
        libft/ft_strlen.c
        libft/ft_strmapi.c
        libft/ft_strncmp.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strtrim.c
        libft/ft_substr.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/libft.h
        readline/chardefs.h
        readline/history.h
        readline/keymaps.h
        readline/readline.h
        readline/rlconf.h
        readline/rlstdc.h
        readline/rltypedefs.h
        readline/tilde.h
        readline/libhistory.a
        readline/libreadline.a
        sources/builtins/cd.c
        sources/builtins/echo.c
        sources/builtins/env.c
        sources/builtins/exit.c
        sources/builtins/export.c
        sources/builtins/pwd.c
        sources/builtins/unset.c
        sources/environ/environ_vars_utils1.c
        sources/environ/environ_vars_utils2.c
        sources/executor/binary.c
        sources/executor/bins_utils.c
        sources/executor/builtins.c
        sources/executor/executor.c
        sources/main/minishell_main.c
        sources/main/readline_prompt.c
        sources/parser/clear_commands_array.c
        sources/parser/get_command_information.c
        sources/parser/get_total_commands_validate_line.c
        sources/parser/parse_and_add_commands.c
        sources/parser/remove_quotes_change_path.c
        sources/parser/remove_redirects_spaces.c
        sources/parser/wildcard_find_all_arguments.c
        sources/parser/wildcard_find_all_utils.c
        sources/signals/catch_signals.c)
